--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,3 +13,6 @@ spring.flyway.password=${spring.datasource.password}
 
 # Logs
 logging.level.org.hibernate.SQL=warn
+
+# UUID
+spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=VARBINARY
