--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Gera timestamp e sha curto
       - name: Make timestamp+sha tag (America/Sao_Paulo)
         id: ts
         run: |
           ts=$(TZ=America/Sao_Paulo date +'%Y%m%d.%H%M%S')
           sha=$(echo "${GITHUB_SHA}" | cut -c1-7)
           echo "tag=${ts}-${sha}" >> $GITHUB_OUTPUT
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -37,7 +39,9 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           tags: |
             ${{ vars.DOCKERHUB_REPOSITORY }}:latest
             ${{ vars.DOCKERHUB_REPOSITORY }}:${{ steps.ts.outputs.tag }}
