--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
