--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,3 +16,12 @@ logging.level.org.hibernate.SQL=warn
 
 # UUID
 spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=VARBINARY
+
+# PARA EVITAR PROBLEMAS DE CORS COM PROXY REVERSO
+server.forward-headers-strategy=framework
+
+# URL pública mostrada no Swagger e usada para gerar links
+app.external-url=https://pi6.logafacil.com.br
+
+# CORS (uma ou mais origens, separadas por vírgula)
+app.cors.allowed-origins=https://pi6.logafacil.com.br,http://localhost:5173
