--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,8 +20,8 @@ spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=VARBINARY
 # PARA EVITAR PROBLEMAS DE CORS COM PROXY REVERSO
 server.forward-headers-strategy=framework
 
-# URL pública mostrada no Swagger e usada para gerar links
+# URL MOSTRADA NO SWAGGER E USADA PARA GERAR LINKS
 app.external-url=https://pi6.logafacil.com.br
 
-# CORS (uma ou mais origens, separadas por vírgula)
+# CORS - ORIGENS SEPARADAS POR VIRGULA
 app.cors.allowed-origins=https://pi6.logafacil.com.br,http://localhost:5173
