Ci/ajusta cors (#9)
* fix: Ajusta pane de cors e url do swagger

* ci: elimina caracteres especiais do application-prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -16,3 +16,12 @@ logging.level.org.hibernate.SQL=warn
 
 # UUID
 spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=VARBINARY
+
+# PARA EVITAR PROBLEMAS DE CORS COM PROXY REVERSO
+server.forward-headers-strategy=framework
+
+# URL MOSTRADA NO SWAGGER E USADA PARA GERAR LINKS
+app.external-url=https://pi6.logafacil.com.br
+
+# CORS - ORIGENS SEPARADAS POR VIRGULA
+app.cors.allowed-origins=https://pi6.logafacil.com.br,http://localhost:5173
