Ci/ajusta cors (#10)
* fix: Ajusta pane de cors e url do swagger

* ci: elimina caracteres especiais do application-prod

* fix: ajusta detalhes de configuracao cors

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -24,4 +24,5 @@ server.forward-headers-strategy=framework
 app.external-url=https://pi6.logafacil.com.br
 
 # CORS - ORIGENS SEPARADAS POR VIRGULA
-app.cors.allowed-origins=https://pi6.logafacil.com.br,http://localhost:5173
+app.cors.allowed-origins=https://pi6.logafacil.com.br
+
