--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -23,7 +23,7 @@ server.forward-headers-strategy=framework
 # URL MOSTRADA NO SWAGGER E USADA PARA GERAR LINKS
 app.external-url=https://pi6.logafacil.com.br
 
-# VERSAO DO APP MOSTRADA NO SWAGGER
+# VERSAO DO APP MOSTRADA NO SWAGGER-
 app.build.version=${APP_BUILD_VERSION:${BUILD_VERSION:dev}}
 
 # CORS - ORIGENS SEPARADAS POR VIRGULA
